--- a/package.json
+++ b/package.json
@@ -1,13 +1,37 @@
 {
   "name": "trello-api",
-  "version": "1.0.0",
-  "type": "module",
-  "description": "duynghiadev mern stack",
-  "main": "src/server.js",
-  "author": "duynghiadev <duynghia22302@gmail.com>",
-  "license": "MIT",
   "private": true,
+  "version": "1.0.0",
+  "author": "DuyNghiaDev - Một Lập Trình Viên",
+  "description": "DuyNghiaDev Mern Stack",
+  "engines": {
+    "node": "18.16.0"
+  },
+  "scripts": {
+    "lint": "eslint --ext js,jsx src/",
+    "lint:fix": "eslint --fix --ext js,jsx src/",
+    "prettier": "prettier --check \"src/**/(*.jsx|*.js|*.css|*.scss)\"",
+    "prettier:fix": "prettier --write \"src/**/(*.jsx|*.js|*.css|*.scss)\"",
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel ./src -d ./build/src",
+    "build": "npm run clean && npm run build-babel",
+    "production": "npm run build && node ./build/src/server.js",
+    "dev": "nodemon --exec babel-node ./src/server.js"
+  },
   "dependencies": {
-    "express": "^4.18.2"
+    "@babel/runtime": "^7.22.10",
+    "express": "^4.18.2",
+    "prettier": "^3.0.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.22.10",
+    "@babel/core": "^7.22.10",
+    "@babel/eslint-parser": "^7.22.10",
+    "@babel/node": "^7.22.10",
+    "@babel/plugin-transform-runtime": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.47.0",
+    "nodemon": "^3.0.1"
   }
 }
