--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@babel/runtime": "^7.22.10",
     "express": "^4.18.2",
+    "mongodb": "^6.0.0",
     "prettier": "^3.0.2"
   },
   "devDependencies": {
