--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.22.10",
+    "async-exit-hook": "^2.0.1",
     "express": "^4.18.2",
     "mongodb": "^6.0.0",
     "prettier": "^3.0.2"
