--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
+    "joi": "^17.10.2",
     "mongodb": "^6.0.0",
     "prettier": "^3.0.2"
   },
